--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.21",
     "core-js": "^2.6.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.11",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-material-design-icons": "^3.2.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
