--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "popper.js": "^1.15.0",
+    "vee-validate": "^2.2.10",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
+    "vue-lodash": "^2.0.2",
     "vue-material-design-icons": "^3.2.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
