--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
+    "luxon": "^1.16.0",
     "popper.js": "^1.15.0",
     "vee-validate": "^2.2.10",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-datetime": "^1.0.0-beta.10",
     "vue-lodash": "^2.0.2",
     "vue-material-design-icons": "^3.2.0",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.4.4",
