--- a/package.json
+++ b/package.json
@@ -8,46 +8,44 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.21",
-    "core-js": "^2.6.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
+    "bootstrap-vue": "^2.14.0",
+    "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.11",
-    "luxon": "^1.16.0",
-    "popper.js": "^1.15.0",
-    "vee-validate": "^2.2.10",
-    "vue": "^2.6.10",
-    "vue-axios": "^2.1.4",
-    "vue-currency-filter": "^3.4.2",
-    "vue-datetime": "^1.0.0-beta.10",
-    "vue-lodash": "^2.0.2",
-    "vue-material-design-icons": "^3.2.0",
-    "vue-moment": "^4.0.0",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1",
-    "weekstart": "^1.0.0"
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.15",
+    "luxon": "^1.24.1",
+    "vee-validate": "^2.2.15",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-currency-filter": "^3.4.3",
+    "vue-datetime": "^1.0.0-beta.13",
+    "vue-lodash": "^2.1.2",
+    "vue-material-design-icons": "^3.4.0",
+    "vue-moment": "^4.1.0",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.4.0",
+    "weekstart": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "babel-eslint": "^10.0.1",
-    "bootstrap": "^4.3.1",
+    "@babel/polyfill": "^7.8.7",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.5.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "mutationobserver-shim": "^0.3.3",
-    "node-sass": "^4.12.0",
-    "popper.js": "^1.15.0",
-    "portal-vue": "^2.1.4",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "mutationobserver-shim": "^0.3.5",
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sass": "^1.26.5",
+    "sass-loader": "^7.3.1",
     "vue-cli-plugin-bootstrap-vue": "^0.4.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   }
 }
